# insat3d_imagen

./: README.md  pyproject.toml
insat3d_imagen/: exception.py  imager_channels.py  insat_image.py  insat_image_interface.py  main.py
tests/: test_insat3d_imagen.py
